tests/invalid/type/manual_ex047.pts
import Io;

function main() : void {
    switch (x) {
    case 1:
        Io.printLine("one"); // invalide sans terminaison explicite
    default:
        Io.printLine("other");
        break;
    }
}
